Fix overflow class

--- a/app/assets/styles/global/_modals.scss
+++ b/app/assets/styles/global/_modals.scss
@@ -198,3 +198,15 @@
     font-size: 1.25rem;
   }
 }
+
+
+/* Modal helpers
+   ========================================================================== */
+
+.modal__unscrollable-y {
+  overflow-y: hidden;
+}
+
+.modal__unscrollable-x {
+  overflow-x: hidden;
+}
